--- a/index.html
+++ b/index.html
@@ -18,8 +18,20 @@
     <hr>
     <section>
         <nav>
-            
+            <a href="#">Home</a>
+            <a href="#">Pagina 1</a>
+            <a href="#">Pagina 2</a>
+            <a href="#">Pagina 3</a>
+            <a href="#">Pagina 4</a>
+            <a href="#">Pagina 5</a>
+            <a href="#">Pagina 6</a>
         </nav>
+    </section>
+    <hr>
+    <section>
+        <article>
+            
+        </article>
     </section>
 </main>
 </body>
