--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
     <hr>
     <section>
         <article>
-            
+            <p class="pcenter">
+                Titulo 1
+                <br>
+                
         </article>
     </section>
 </main>
