--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p class="pcenter">
                 Titulo 1
                 <br>
-                
+                <img id="ileft" src="imagens/star-wars.jpg" alt="star-wars" title="star-wars">                
         </article>
     </section>
 </main>
