--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Responsividade com DIV</title>
 </head>
 <body>
+    <!--Header-->
 <main>
     <header>
              <p id="pheader">
@@ -16,6 +17,7 @@
              </p>
     </header>
     <hr>
+    <!--Section-->
     <section>
         <nav>
             <a href="#">Home</a>
@@ -53,8 +55,18 @@
                 </p>            
         </article>
     </section>
+
+    <!--Footer-->
     <footer>
-        
+            <a href="https://www.facebook.com/" target="blank">
+            <img class="imgredes" src="imagens/logoface.png" alt="Facebook" title="Facebook">
+            </a>
+            <a href="https://instagram.com/" target="blank">
+                <img class="imgredes" src="imagens/logoinst.png" alt="Instagram" title="Instagram">
+                </a>
+            <a href="https://twitter.com/" target="blank">
+                <img class="imgredes" src="imagens/logox.png" alt="Twitter" title="Twitter">
+            </a>    
     </footer>
 </main>
 </body>
