--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
     <!--Header-->
 <main>
     <header>
+        <div id="divesqheader">
              <p id="pheader">
             <img id="imgheader" src="imagens/logonome.png">
              </p>
+        </div><!--Fim da div divesqheader-->
+        <div id="divmeioheader">
+            Que a força esteja com voce
+        </div><!--Fim da div divmeioheader-->
     </header>
     <hr>
     <!--Section-->
@@ -58,6 +63,7 @@
 
     <!--Footer-->
     <footer>
+        <div id="divesqfooter">
             <a href="https://www.facebook.com/" target="blank">
             <img class="imgredes" src="imagens/logoface.png" alt="Facebook" title="Facebook">
             </a>
@@ -67,6 +73,10 @@
             <a href="https://twitter.com/" target="blank">
                 <img class="imgredes" src="imagens/logox.png" alt="Twitter" title="Twitter">
             </a>    
+        </div><!--Fim da div divesqfooter-->
+        <div id="divmeiofooter">
+            Star Wars 2024
+        </div><!--Fim da div divmeiofooter-->
     </footer>
 </main>
 </body>
