--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="imagens/google.ico">
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
     <link rel="stylesheet" type="text/css" href="css/corpo.css">
+    <link rel="stylesheet" type="text/css" href="css/menu.css">
     <title>Responsividade com DIV</title>
 </head>
 <body>
@@ -24,14 +25,27 @@
     <hr>
     <!--Section-->
     <section>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">Pagina 1</a>
-            <a href="#">Pagina 2</a>
-            <a href="#">Pagina 3</a>
-            <a href="#">Pagina 4</a>
-            <a href="#">Pagina 5</a>
-            <a href="#">Pagina 6</a>
+        <nav id="menu">
+            <ul>
+                <li>
+                    <a href="#">Inicio</a>
+                </li>
+                <li>
+                    <a href="#">Pagina 2</a>
+                </li>
+                <li>
+                    <a href="#">Pagina 3</a>
+                </li>
+                <li>
+                    <a href="#">Pagina 4</a>
+                </li>
+                <li>
+                    <a href="#">Pagina 5</a>
+                </li>
+                <li>
+                    <a href="#">Pagina 6</a>
+                </li>
+            </ul>
         </nav>
     </section>
     <hr>
