--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Responsividade com DIV</title>
 </head>
 <body>
+    
     <!--Header-->
 <main>
     <header>
@@ -23,28 +24,31 @@
         </div><!--Fim da div divmeioheader-->
     </header>
     <hr>
+
     <!--Section-->
     <section>
+    <input type="checkbox" id="bt_menu"/>
+    <label for="bt_menu">&#9776</label>
         <nav id="menu">
             <ul>
-                <li>
-                    <a href="#">Inicio</a>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Pagina 2</a>
+                    <ul>
+                        <li><a href="#">Sub 2</a></li>
+                        <li><a href="#">Sub 3</a></li>
+                        <li><a href="#">Sub 4</a></li>
+                    </ul>
                 </li>
-                <li>
-                    <a href="#">Pagina 2</a>
+                <li><a href="#">Pagina 3</a></li>
+                <li><a href="#">Pagina 4</a>
+                    <ul>
+                        <li><a href="#">Sub 2</a></li>
+                        <li><a href="#">Sub 3</a></li>
+                        <li><a href="#">Sub 4</a></li>
+                    </ul>
                 </li>
-                <li>
-                    <a href="#">Pagina 3</a>
-                </li>
-                <li>
-                    <a href="#">Pagina 4</a>
-                </li>
-                <li>
-                    <a href="#">Pagina 5</a>
-                </li>
-                <li>
-                    <a href="#">Pagina 6</a>
-                </li>
+                <li><a href="#">Pagina 5</a></li>
+                <li><a href="#">Pagina 6</a></li>
             </ul>
         </nav>
     </section>
@@ -71,7 +75,8 @@
                 <p id="pright">
                     <img id="iright" src="imagens/star-wars3.png" alt="star-wars" title="star-wars">
                     Star Wars é uma franquia do tipo space opera estadunidense criada pelo cineasta George Lucas, que conta com uma série de nove filmes de fantasia científica e dois spin-offs. O primeiro filme foi lançado apenas com o título Star Wars, em 25 de maio de 1977, e tornou-se um fenômeno mundial inesperado de cultura popular, sendo responsável pelo início da "era dos blockbusters", que são superproduções cinematográficas que fazem sucesso nas bilheterias e viram franquias com brinquedos, jogos, livros, etc. Foi seguido por duas sequências, The Empire Strikes Back e Return of the Jedi, lançadas com intervalos de três anos, formando a trilogia original, que segue o trio icônico formado por Luke Skywalker, Han Solo e Princesa Leia, que luta pela Aliança Rebelde para derrubar o tirano Império Galáctico; paralelamente ocorre a jornada de Luke para se tornar um cavaleiro Jedi e a luta contra Darth Vader, um ex-Jedi que sucumbiu ao Lado Sombrio da Força e ao Imperador.
-                </p>            
+                </p> 
+                <br>           
         </article>
     </section>
 
